--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <body>
     <header>
         <h1>Welcome to the Demo Page</h1>
+        <h1>I'm Shraddha</h1>
     </header>
     <main>
         <section>
